# ireland_code_package

./: pyproject.toml
src/ireland_code_pkg/: __init__.py  ireland_fields.py
tests/: test_ireland_fields.py
